k3s/applications/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
  labels:
    app.kubernetes.io/name: sonarr
spec:
  type: ClusterIP
  selector:
    app: sonarr
  ports:
    - name: http
      port: 8989
      targetPort: 8989
      protocol: TCP
    - name: metrics
      port: 9707
      targetPort: 9707
      protocol: TCP
